<resources>

    <string name="app_name">LDA in Pocket</string>

    //URL - LDA Wordpress API
    <string name="setting_how_many_of_posts">per_page</string>
    <string name="setting_number_of_posts">6</string>

    //Bottom Navigation and Title
    <string name="title_news">News</string>
    <string name="title_activities">Activities</string>
    <string name="title_go_abroad">Go Abroad</string>
    <string name="title_more">More</string>
    <string name="news_image_of_lda">News image of LDA</string>
    <string name="title_closest_events">Closest events</string>
    <string name="send_email">Take a part!</string>
    <string name="go_back">Go back</string>
    <string name="click_to_open">Click to open</string>
    <string name="title_partners">Activities of partners</string>
    <string name="partner_logo">Partner logo</string>
    <string name="missing_connectivity">Oops, missing data! Is your internet fine?</string>
    <string name="no_events_planned">Oops, mising data! Here are no events, but you can check you Facebook.</string>
    <string name="no_posts">Oops, missing data! Please, contact us to solve the problem.</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="go_abroad_with_us_text">With our agency you can make a huge impact on your life. Go abroad and be there up to 1 year fro free\'</string>
    <string name="title_youth_exchange">Youth Exchange</string>
    <string name="title_evs">European Voluntary Service</string>
    <string name="title_quiz">Let\'s play quiz - human rights!</string>
    <string name="description_quiz">This quiz will test your knowledge. Don\'t be afraid to try it. We will tell you the right sollution anyway.</string>
    <string name="title_credits">Credits</string>
    <string name="description_credits">Those are the authors of this app!</string>


</resources>
