<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/parent_layout_activities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_bar_activities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
             />

        <TextView
            android:id="@+id/header_events"
            style="@style/Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/title_closest_events" />


        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/events_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_events"
            android:layout_margin="@dimen/margin_small"
            android:divider="@null"
            android:orientation="vertical" />

        <android.support.v7.widget.CardView
            android:id="@+id/empty_view_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_events">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/empty_imageview_events"
                android:layout_margin="@dimen/margin_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_no_event"
                />

            <TextView
                android:id="@+id/empty_textview_events"
                style="@style/item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_events_planned"
                android:gravity="center"/>



        </LinearLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/parent_layout_partners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/parent_layout_activities"
        >

        <ProgressBar
            android:id="@+id/progress_bar_partners"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/header_partners"
            style="@style/Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/title_partners"/>


        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/partners_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_partners"
            android:layout_margin="@dimen/margin_small"
            android:divider="@null"
            android:orientation="vertical" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>