<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/parent_layout_activities"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimarySide">

            <ProgressBar
                android:id="@+id/progress_bar_activities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header_events"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <TextView
                android:id="@+id/header_events"
                style="@style/Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/title_closest_events"
                android:textColor="@color/white"/>


            <ListView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/events_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header_events"
                android:layout_margin="@dimen/margin_small"
                android:divider="@null"
                android:orientation="vertical" />

            <android.support.v7.widget.CardView
                android:id="@+id/empty_view_events"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header_events">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/empty_imageview_events"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:src="@drawable/ic_no_event" />

                    <TextView
                        android:id="@+id/empty_textview_events"
                        style="@style/item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/no_events_planned" />


                </LinearLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/parent_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/header_partners"
                style="@style/Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/title_partners" />

            <android.support.v7.widget.CardView
                android:id="@+id/partners_cardview"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@id/header_partners"
                >

            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>